// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render parameters 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Parameters
      </th>
      <th
        className=""
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          <_class
            className=""
          >
            method
            ()
          </_class>
        </_class>
      </td>
      <td>
        <div>
          <_class>
            value
          </_class>
          : 
          <_class>
            Number
          </_class>
           — 
          <_class
            inline={true}
            text="Description"
          />
        </div>
      </td>
      <td
        className=""
      >
        <_class />
        <_class />
        <_class />
        <Group
          separator=" "
        >
          <_class
            inline={true}
            text="Public"
          />
        </Group>
        <_class />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render public method 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Parameters
      </th>
      <th
        className=""
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          <_class
            className=""
          >
            method
            ()
          </_class>
        </_class>
      </td>
      <td />
      <td
        className=""
      >
        <_class />
        <_class />
        <_class />
        <Group
          separator=" "
        >
          <_class
            inline={true}
            text="Public"
          />
        </Group>
        <_class />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render returns 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Parameters
      </th>
      <th
        className=""
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          <_class
            className=""
          >
            method
            ()
          </_class>
        </_class>
      </td>
      <td />
      <td
        className=""
      >
        <_class />
        <_class />
        <_class />
        <Group
          separator=" "
        />
        <span>
          Returns
           
          <_class>
            Number
          </_class>
           — 
          <_class
            inline={true}
            text="Description"
          />
        </span>
        <_class />
      </td>
    </tr>
  </tbody>
</table>
`;
